backend/post-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: post-service
  template:
    metadata:
      labels:
        app: post-service
    spec:
      containers:
      - name: post-service
        image: 404456670711.dkr.ecr.us-east-1.amazonaws.com/post-service:latest  
        ports:
        - containerPort: 3004
